--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,13 +17,10 @@
         </activity>
         <activity
             android:name=".Main2Activity"
+            android:screenOrientation="locked"
             android:label="@string/title_activity_main2"
             android:theme="@style/AppTheme.NoActionBar" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
 
         </activity>
     </application>
